--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-json-view": "^1.13.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
