--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.18.2",
     "debug": "^3.1.0",
     "express": "^4.16.1",
+    "material-ui": "^1.0.0-beta.12",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-json-view": "^1.13.0",
