--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "styled-components": "^2.2.0",
     "twilio": "^3.7.0",
     "twilio-sync": "^0.6.0"
   },
