--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "^3.1.0",
     "express": "^4.16.1",
     "material-ui": "^1.0.0-beta.12",
+    "material-ui-icons": "^1.0.0-beta.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-json-view": "^1.13.0",
