:wrench: Turn off debug logging

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "dev:react": "react-scripts start",
-    "dev:node": "DEBUG=twilio-sync-inspector:* nodemon --watch server --watch bin .",
+    "dev:node": "nodemon --watch server --watch bin .",
     "dev": "npm-run-all -p dev:*",
     "start": "node .",
     "build": "react-scripts build",
