--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chalk": "^2.1.0",
+    "commander": "^2.11.0",
     "debug": "^3.1.0",
     "event-emitter": "^0.3.5",
     "express": "^4.16.1",
     "material-ui": "^1.0.0-beta.12",
     "material-ui-icons": "^1.0.0-beta.10",
+    "opn": "^5.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-json-view": "^1.13.0",
